--- a/project/server/.env
+++ b/project/server/.env
@@ -1,3 +1,5 @@
-DATABASE_URL=postgresql://johndoe:randompassword@localhost:5432/mydb?schema=public
+DATABASE_URL=postgresql://postgres:Ashik@123@localhost:5432/superfill?schema=public
 NODE_ENV = dev
 PORT = 5000
+
+JWT_SECRET = JWT_SECRET_NEED_TO_CHANGE_ON_PRODUCTION
