--- a/project/server/.env
+++ b/project/server/.env
@@ -3,3 +3,4 @@ NODE_ENV = dev
 PORT = 5000
 
 JWT_SECRET = JWT_SECRET_NEED_TO_CHANGE_ON_PRODUCTION
+API_KEY = JASKDFJIJ4348sdfs5388FJIFJ84df78F84757UGH7588
